--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,6 @@
   <%= f.label :password %><br/>
   <%= f.password_field :password %><br/><br/>
 
-  <%= f.submit 'Create User' %>
+  <%= f.submit %>
 <% end %>
 
