commit tree 6cda0e9cc3c827a513ea329683cf1a5e7c6b743d

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,12 @@
+
+<strong><%= is_admin %></strong><br/><br/>
 <strong>Name: </strong><p><%= @user.name %></p>
 <strong>Tickets: </strong><p><%= @user.tickets %></p>
 <strong>Mood: </strong><p><%= @user.mood %></p>
 <strong>Height: </strong><p><%= @user.height %> inches</p>
+<br/>
+<%= link_to "See attractions", attractions_path %>
+
+<% if flash[:notice] %>
+<%= flash[:notice] %>
+<% end %>
