--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <!-- <a class="navbar-brand" href="<%= root_url %>"/>Home</a> -->
+        <%= link_to "Home", root_url, class:"navbar-brand" %>
+        <% if current_user %>
+          <%= link_to "#{current_user.name}'s profile", user_path(current_user), class:"navbar-brand" %>
+          <%= link_to "Log Out", logout_path, class:"navbar-brand", method:"delete" %>
+        <% else %>
+          <%= link_to "Sign Up", "/users/new", class:"navbar-brand" %>
+          <%= link_to "Log In", signin_path, class:"navbar-brand" %>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
